base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: placeholder-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-service
                port:
                  number: 80
